[package]
name = "controller_messing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dual-shock4-controller = "0.1.1"
enigo = "0.0.14"
egui = "0.19.0"
eframe = "0.19.0"
home = "0.5.3"
hex = "0.4.3"
im-rc = "15.1.0"